[Feat]: Change db config

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,6 +14,9 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <script defer src="face-api.min.js"></script>
+  <script>
+    window.API_URL = "\<\%= API_URL \%\>";
+  </script>
   <!-- <script defer src="script.js"></script> -->
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
